# crypto_notification_pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/crypto_notification_pipeline/: __init__.py  api.py  contracts.py  idempotency.py  notifiers.py  observability.py  queue.py  worker.py
tests/: test_pipeline.py
