[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-notification-pipeline"
version = "0.1.0"
description = "Minimal production-grade crypto notification pipeline with distributed-systems test coverage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
